force-app/main/default/objects/Production_Tracker__c/Production_Tracker__c.object-meta.xml
<CustomObject>
    <label>Production Tracker</label>
    <nameField>
        <displayFormat>prod-{000}</displayFormat>
        <label>Production Tracker No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Production Tracker</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>