force-app/main/default/objects/Production_Tracker__c/fields/Achieved__c.field-meta.xml
<CustomField>
    <fullName>Achieved__c</fullName>
    <formula>IF(ISBLANK(Actual_Production__c), &quot;Not Started&quot;,
   IF(Actual_Production__c &lt; Daily_Target__c, &quot;In Progress&quot;,
      &quot;Achieved&quot;
   )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Achieved</label>
    <type>Text</type>
</CustomField>