force-app/main/default/objects/Production_Tracker__c/fields/Actual_Production__c.field-meta.xml
<CustomField>
    <fullName>Actual_Production__c</fullName>
    <label>Actual Production</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>