force-app/main/default/objects/Production_Tracker__c/fields/Daily_Target__c.field-meta.xml
<CustomField>
    <fullName>Daily_Target__c</fullName>
    <formula>Monthly_Target__c  /  Number_of_Days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Daily Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>