force-app/main/default/objects/Production_Tracker__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Production Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Production_Tracker</relationshipName>
    <type>Lookup</type>
</CustomField>