force-app/main/default/objects/Production_Tracker__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Production Tracker</relationshipLabel>
    <relationshipName>Production_Tracker</relationshipName>
    <type>Lookup</type>
</CustomField>