force-app/main/default/objects/Production_Tracker__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In progress</fullName>
                <color>#FF6600</color>
                <label>In progress</label>
            </value>
            <value>
                <fullName>Not Achieved</fullName>
                <color>#FF0000</color>
                <label>Not Achieved</label>
            </value>
            <value>
                <fullName>Achieved</fullName>
                <color>#009900</color>
                <label>Achieved</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>