force-app/main/default/objects/Production_Tracker__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Monthly_Target__c</columns>
    <columns>Daily_Target__c</columns>
    <columns>Achieved__c</columns>
    <columns>Product__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>